simple-express-mongo-app/k8s/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-express-mongo-app-pod
  namespace: simple-express-mongo
spec:
  containers:
  - name: simple-express-mongo-app
    image: dboullon/simple-express-mongo-app
    volumeMounts:
    - name: volumen-config
      mountPath: /usr/src/app/config/
  ### Fin de containers.
  volumes: 
  - name: volumen-config
    configMap: 
      name: app-configmap
