simple-express-mongo-app/k8s/app-simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-express-mongo-app-pod
  namespace: simple-express-mongo
spec:
  containers:
  - name: simple-express-mongo-app
    image: dboullon/simple-express-mongo-app
