simple-express-mongo-app/k8s/mongo-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo
  namespace: simple-express-mongo
  labels:
    app: mongo
    app.openshift.io/runtime-namespace: simple-express-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        deploymentconfig: mongo
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      volumes:
        - name: mongo-1
          emptyDir: {}
        - name: mongo-2
          emptyDir: {}
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: mongo-1
              mountPath: /data/configdb
            - name: mongo-2
              mountPath: /data/db
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
