simple-express-mongo-app/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: simple-express-mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 27017


#      <service-name>.<namespace>.svc.cluster.local:<service-port>
#      mongo-service.simple-express-mongo.svc.cluster.local:80
