simple-express-mongo-app/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-express-mongo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /simple
        pathType: Prefix
        backend:
          service:
            name: simple-express-mongo-service
            port:
              number: 80
